// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate manuscript validate manuscript: validate-manuscript 1`] = `
Object {
  "_id": Any<String>,
  "affectedElementId": "MPBibliographyItem:6C6AF046-1C45-4CC5-9F38-93BC736E5293",
  "ignored": false,
  "message": "DOI is required for bibliographic references",
  "objectType": "MPBibliographyValidationResult",
  "passed": false,
  "severity": 0,
  "type": "bibliography-doi-exist",
}
`;

exports[`validate manuscript validate manuscript: validate-manuscript 2`] = `
Object {
  "_id": Any<String>,
  "data": Object {
    "allowedImageTypes": Array [],
    "contentType": "image/jpeg",
  },
  "ignored": false,
  "message": "JPEG format is not allowed, allowed formats ()",
  "objectType": "MPFigureFormatValidationResult",
  "passed": false,
  "severity": 0,
  "type": "figure-format-validation",
}
`;

exports[`validate manuscript validate manuscript: validate-manuscript 3`] = `
Object {
  "_id": Any<String>,
  "data": Object {
    "allowedImageTypes": Array [],
    "contentType": "image/png",
  },
  "ignored": false,
  "message": "PNG format is not allowed, allowed formats ()",
  "objectType": "MPFigureFormatValidationResult",
  "passed": false,
  "severity": 0,
  "type": "figure-format-validation",
}
`;

exports[`validate manuscript validate manuscript: validate-manuscript 4`] = `
Object {
  "_id": Any<String>,
  "affectedElementId": "MPFigure:C9A3CBCE-4AF4-4AD2-97B0-D2848BEFDE5F",
  "ignored": false,
  "message": "Image data for figure is missing",
  "objectType": "MPFigureImageValidationResult",
  "passed": false,
  "severity": 0,
  "type": "figure-contains-image",
}
`;

exports[`validate manuscript validate manuscript: validate-manuscript 5`] = `
Object {
  "_id": Any<String>,
  "affectedElementId": "MPFigure:C9A3CBCE-4AF4-4AD2-97B0-D2848BEFDE5A",
  "ignored": false,
  "message": "Image data for figure is included",
  "objectType": "MPFigureImageValidationResult",
  "passed": true,
  "severity": 0,
  "type": "figure-contains-image",
}
`;
